[package]
name = "spin-js-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "spinjs"
path = "src/main.rs"

[dependencies]
wizer = "1.6.0"
structopt = "0.3"
anyhow = "1.0"
tempfile = "3.2.0"
binaryen = { git = "https://github.com/pepyakin/binaryen-rs" }
reqwest = "0.11.14"
tokio = { version = "1.23", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0.0"
semver = "1.0.16"
